; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/oxygen/extr_xonar_dg.c_adjust_dg_dac_routing.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/oxygen/extr_xonar_dg.c_adjust_dg_dac_routing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oxygen = type { i32 }

@OXYGEN_PLAY_DAC0_SOURCE_MASK = common dso_local global i32 0, align 4
@OXYGEN_PLAY_DAC2_SOURCE_SHIFT = common dso_local global i32 0, align 4
@OXYGEN_PLAY_DAC1_SOURCE_SHIFT = common dso_local global i32 0, align 4
@OXYGEN_PLAY_DAC1_SOURCE_MASK = common dso_local global i32 0, align 4
@OXYGEN_PLAY_DAC2_SOURCE_MASK = common dso_local global i32 0, align 4
@OXYGEN_PLAY_DAC0_SOURCE_SHIFT = common dso_local global i32 0, align 4
@OXYGEN_PLAY_DAC3_SOURCE_SHIFT = common dso_local global i32 0, align 4
@OXYGEN_PLAY_DAC3_SOURCE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.oxygen*, i32)* @adjust_dg_dac_routing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adjust_dg_dac_routing(%struct.oxygen* %0, i32 %1) #0 {
  %3 = alloca %struct.oxygen*, align 8
  %4 = alloca i32, align 4
  store %struct.oxygen* %0, %struct.oxygen** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @OXYGEN_PLAY_DAC0_SOURCE_MASK, align 4
  %7 = and i32 %5, %6
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @OXYGEN_PLAY_DAC2_SOURCE_SHIFT, align 4
  %10 = load i32, i32* @OXYGEN_PLAY_DAC1_SOURCE_SHIFT, align 4
  %11 = load i32, i32* @OXYGEN_PLAY_DAC1_SOURCE_MASK, align 4
  %12 = call i32 @shift_bits(i32 %8, i32 %9, i32 %10, i32 %11)
  %13 = or i32 %7, %12
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @OXYGEN_PLAY_DAC1_SOURCE_SHIFT, align 4
  %16 = load i32, i32* @OXYGEN_PLAY_DAC2_SOURCE_SHIFT, align 4
  %17 = load i32, i32* @OXYGEN_PLAY_DAC2_SOURCE_MASK, align 4
  %18 = call i32 @shift_bits(i32 %14, i32 %15, i32 %16, i32 %17)
  %19 = or i32 %13, %18
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @OXYGEN_PLAY_DAC0_SOURCE_SHIFT, align 4
  %22 = load i32, i32* @OXYGEN_PLAY_DAC3_SOURCE_SHIFT, align 4
  %23 = load i32, i32* @OXYGEN_PLAY_DAC3_SOURCE_MASK, align 4
  %24 = call i32 @shift_bits(i32 %20, i32 %21, i32 %22, i32 %23)
  %25 = or i32 %19, %24
  ret i32 %25
}

declare dso_local i32 @shift_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
